<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_viewer"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:layout_collapseMode="pin"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        app:titleTextColor="@color/colorbuttonmain" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/PasswordView_viewer"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:hint="@string/passwordview"
                android:padding="30dp"
                android:textAlignment="center"
                android:textSize="30sp"

                />

            <EditText
                android:id="@+id/UserKeyInput_viewer"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="0dp"
                android:hint="@string/userkey"

                />

            <EditText
                android:id="@+id/DeviceNameInput_viewer"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="0dp"
                android:hint="@string/devicename"

                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/allowletter_viewer"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:checked="true"
                    android:text="@string/allowletter" />

                <CheckBox
                    android:id="@+id/allownumber_viewer"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginTop="0dp"
                    android:checked="true"
                    android:text="@string/allownum" />

                <CheckBox
                    android:id="@+id/allowdilemma_viewer"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:text="@string/allowdilemma" />
            </LinearLayout>

            <SeekBar
                android:id="@+id/passwordlength_viewer"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="0dp"
                android:layout_marginRight="10dp"
                android:max="20"
                android:min="1"
                android:progress="10"
                android:tooltipText="Passwordslength" />

         <!--   <TextView
                android:id="@+id/TutorialView_viewer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:padding="10dp"
                android:text="@string/tutorial_text"

                />-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"

                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/previousmonthbutton"
                    android:layout_width="100dp"
                    android:layout_height="50dp"


                    android:clickable="true"
                    android:gravity="center"
                    android:onClick="PreviousMonth"
                    android:text="@string/previous"
                    android:textAllCaps="false"
                    android:textAppearance="?android:attr/textAppearanceLargeInverse"
                    app:backgroundTint="@color/colorbuttonside"
                    app:icon="@drawable/left"
                    app:iconSize="30dp"
                    app:iconTint="@color/colorbuttonmain" />

                <TextView
                    android:id="@+id/degree"
                    android:layout_width="150dp"
                    android:layout_height="42dp"


                    android:background="@color/colorbuttonmain"

                    android:gravity="center"

                    android:longClickable="true"
                    android:onClick="HomeMonth"
                    android:text="@string/currentmonth"
                    android:textAllCaps="false"

                    android:textAppearance="?android:attr/textAppearanceLargeInverse" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/nextmonthbutton"
                    android:layout_width="100dp"
                    android:layout_height="50dp"



                    android:clickable="true"
                    android:gravity="center"
                    android:layoutDirection="rtl"
                    android:onClick="NextMonth"
                    android:text="@string/next"
                    android:textAllCaps="false"
                    android:textAppearance="?android:attr/textAppearanceLargeInverse"
                    app:backgroundTint="@color/colorbuttonside"
                    app:icon="@drawable/right"
                    app:iconSize="30dp"
                    app:iconTint="@color/colorbuttonmain" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>