<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    app:popupTheme="@style/AppTheme.PopupOverlay">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_lunarpassword"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:layout_collapseMode="pin"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        app:titleTextColor="@color/colorbuttonmain" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        app:layout_anchor="@+id/scrollView2"
        app:layout_anchorGravity="center">

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

       <!--     <TextView
                android:id="@+id/PasswordView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="?attr/actionBarSize"
                android:gravity="center"
                android:hint="@string/passwordview"
                android:padding="30dp"
                android:textAlignment="center"
                android:textSize="30sp"

                />-->

            <EditText
                android:id="@+id/UserKeyInput"
                android:layout_width="match_parent"
                android:layout_height="80dp"

                android:layout_gravity="bottom"
                android:hint="@string/userkey"

                />

            <EditText
                android:id="@+id/DeviceNameInput"
                android:layout_width="match_parent"
                android:layout_height="80dp"

                android:layout_gravity="bottom"
                android:hint="@string/devicename" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:id="@+id/allowletter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|end"
                    android:checked="true"
                    android:text="@string/allowletter"

                    />

                <CheckBox
                    android:id="@+id/allownumber"


                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_gravity="bottom"
                    android:checked="true"
                    android:text="@string/allownum" />

                <CheckBox
                    android:id="@+id/allowdilemma"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|end"
                    android:text="@string/allowdilemma" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/passwordlengthname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/passwordlength" />

                <TextView
                    android:id="@+id/passwordlengthnum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="10" />
            </LinearLayout>

            <SeekBar
                android:id="@+id/passwordlength"

                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_gravity="bottom"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:max="20"
                android:min="1"
                android:progress="10"
                android:tooltipText="Passwordslength" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/TutorialView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_gravity="bottom"
                    android:padding="10dp"
                    android:text="@string/tutorial_text" />
            </ScrollView>

            <!--   <com.google.android.material.floatingactionbutton.FloatingActionButton
                   android:id="@+id/fab"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_margin="@dimen/fab_margin"
                   app:srcCompat="@drawable/ic_lock_open_black_24dp" />-->
        </LinearLayout>
    </ScrollView>

    <!-- <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         app:layout_collapseMode="pin"
         app:popupTheme="@style/AppTheme.PopupOverlay" />-->

</androidx.coordinatorlayout.widget.CoordinatorLayout>