<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_about"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:layout_collapseMode="pin"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        app:titleTextColor="@color/colorbuttonmain" />

    <ScrollView
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/welcomeImg"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginLeft="80dp"
                android:layout_marginTop="100dp"
                android:layout_marginRight="80dp"
                android:layout_marginBottom="0dp"
                android:contentDescription="Software_Logo"
                android:src="@mipmap/ic_launcher_round" />

            <TextView
                android:id="@+id/LogoName"
                android:layout_width="match_parent"
                android:layout_height="50dp"

                android:gravity="center"
                android:text="@string/app_name"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:gravity="center"
                android:text="@string/appversion"
                android:textSize="14sp"

                />

            <Button
                android:id="@+id/button"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="#dadada"
                android:backgroundTint="#dadada"
                android:text="@string/feedback"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:clickable="true"
                android:onClick="sendfeedback"/>

            <Button
                android:id="@+id/Rateus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="rateus"
                android:text="@string/RateUs" />

        </LinearLayout>
    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>